@@ -512,6 +512,52 @@ class DatajsonHarvestMigrationScenariosTest extends PHPUnit_Framework_TestCase {
   }
 
   /**
+   * Test harvest source Temporal field support entries.
+   *
+   * The test json file contain multiple temporal field with various edge cases
+   * that we want to check. Those are listed in the expected temporal values.
+   */
+  public function testTemporal() {
+    $expected_temporal = array(
+      "Ambulance Fee Schedule Public Use Files" => array(
+        'value' => "2005-01-01 00:00:00",
+        'value2' => "2016-01-01 00:00:00",
+      ),
+      'Acute IPPS - Readmissions Reduction Program' => array(
+        'value' => "2013-01-01 00:00:00",
+        'value2' => "2013-01-01 00:00:00",
+      ),
+      'Acute IPPS - Disproportionate Share Hospital - DSH' => array(
+        'value' => "1988-01-01 00:00:00",
+        'value2' => "1988-01-08 00:00:00",
+      ),
+      'UPIN Group File' => array(
+        'value' => "2000-01-15T00:45:00Z",
+        'value2' => "2010-01-15T00:06:00Z",
+      ),
+    );
+
+    // Harvest the faulty source.
+    dkan_harvest_cache_sources(array(self::getResourceTemporal()));
+    dkan_harvest_migrate_sources(array(self::getResourceTemporal()));
+
+    $migration = dkan_harvest_get_migration(self::getResourceTemporal());
+    $migrationMap = $this->getMapTableFromMigration($migration);
+
+    $dest_ids = array_map(function ($mapRecord) {
+      return $mapRecord->destid1;
+    }, $migrationMap);
+
+    foreach ($dest_ids as $distid) {
+      $dataset = entity_metadata_wrapper('node', $distid);
+      $value = new DateTime($expected_temporal[$dataset->label()]['value']);
+      $value2 = new DateTime($expected_temporal[$dataset->label()]['value2']);
+      $this->assertEquals($value->getTimestamp(), $dataset->field_temporal_coverage->value->value());
+      $this->assertEquals($value2->getTimestamp(), $dataset->field_temporal_coverage->value2->value());
+    }
+  }
+
+  /**
    * Check Error logging for the harvest.
    *
    * Ticket: https://jira.govdelivery.com/browse/CIVIC-4498
@@ -659,6 +705,13 @@ class DatajsonHarvestMigrationScenariosTest extends PHPUnit_Framework_TestCase {
    */
   public static function getResourceSchemeless() {
     return new HarvestSourceDataJsonStub(__DIR__ . '/data/dkan_harvest_datajson_test_schemeless_resource.json');
+  }
+
+  /**
+   * Test Harvest Source.
+   */
+  public static function getResourceTemporal() {
+    return new HarvestSourceDataJsonStub(__DIR__ . '/data/dkan_harvest_datajson_test_temporal.json');
   }
 
   /**
