@@ -90,7 +90,6 @@ class DatajsonHarvestMigrationTest extends PHPUnit_Framework_TestCase {
     $this->assertEquals("95f8eac4-fd1f-4b35-8472-5c87e9425dfa", $dataset->uuid->value());
   }
 
-
   /**
    * Test Contact.
    *
@@ -99,6 +98,18 @@ class DatajsonHarvestMigrationTest extends PHPUnit_Framework_TestCase {
   public function testContact($dataset) {
     $this->assertEquals("Stefanie Gray", $dataset->field_contact_name->value());
     $this->assertEquals("stefanie@nucivic.com", $dataset->field_contact_email->value());
+  }
+
+  /**
+   * Test Temporal Coverage.
+   *
+   * @depends testDatasetCount
+   */
+  public function testTemporal($dataset) {
+    $value = new DateTime("2011-01-01 00:00:00");
+    $value2 = new DateTime("2015-01-01 00:00:00");
+    $this->assertEquals($value->getTimestamp(), $dataset->field_temporal_coverage->value->value());
+    $this->assertEquals($value2->getTimestamp(), $dataset->field_temporal_coverage->value2->value());
   }
 
   /**
